2008-06-05  Vincent Untz  <vuntz@gnome.org>

	Let's start cleaning up the source. Okay, this attempt will certainly
	fail at some point ;-)
	First step, create an internal libpanel-util library where we put some
	utility functions.
	We start with the GKeyFile extensions.

	* Makefile.am: updated for this change
	* libpanel-util/Makefile.am: new
	* libpanel-util/panel-keyfile.[ch]: new, based on panel-util.c code
	* panel-ditem-editor.c: s/panel_util_key_file/panel_key_file/g
	* panel-menu-items.c: s/panel_util_key_file/panel_key_file/g
	* panel-run-dialog.c: s/panel_util_key_file/panel_key_file/g
	* panel-util.[ch]: s/panel_util_key_file/panel_key_file/g and remove
	panel_util_key_file*
	* launcher.c: s/panel_util_key_file/panel_key_file/g
	* gnome-desktop-item-edit.c: s/panel_util_key_file/panel_key_file/g

==================== 2.23.3 ====================

2008-05-20  Vincent Untz  <vuntz@gnome.org>

	* panel-addto.c: (panel_addto_setup_launcher_drag): use an URI and not
	a path when setting the drag source for text/uri-list. Fix bug #532171.

2008-05-16  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (activate_uri_on_screen): new, based on
	activate_uri
	(activate_uri): just call activate_uri_on_screen
	(volume_mount_cb): open the mount after having mounted it
	Fix bug #528423

==================== 2.23.2.1 ====================

==================== 2.23.2 ====================

2008-05-07  Vincent Untz  <vuntz@gnome.org>

	* panel-recent.c: (show_uri): do not only look for applications that
	can open URI; if the file is gio-native (file://), then it's fine to
	get applications that can open paths.

==================== 2.23.1 ====================

==================== 2.22.1.3 ====================

==================== 2.22.1.2 ====================

==================== 2.22.1.1 ====================

==================== 2.22.1 ====================

2008-04-04  Vincent Untz  <vuntz@gnome.org>
